Added score and reset

--- a/Rock Paper Scissors/index.html
+++ b/Rock Paper Scissors/index.html
@@ -11,6 +11,7 @@
     <button onclick="rock()">Rock</button>
     <button onclick="paper()">Paper</button>
     <button onclick="scissors()">Scissors</button>
+    <button onclick="reset()">Reset</button>
 
     <script src="index.js"></script>
 </body>
