--- a/Objects/index.html
+++ b/Objects/index.html
@@ -44,6 +44,11 @@
         console.log(product2['rating']['count']);
         product2.fun();
 
+        console.log(JSON.stringify(product2));
+
+        const jsonString = JSON.stringify(product2);
+        console.log(JSON.parse(jsonString));
+
     </script>
 </body>
 </html>
