--- a/Objects/index.html
+++ b/Objects/index.html
@@ -49,6 +49,41 @@
         const jsonString = JSON.stringify(product2);
         console.log(JSON.parse(jsonString));
 
+        console.log('hello'.length);
+        console.log('hello'.toUpperCase());
+
+        const object1 = {
+            message: 'hello'
+        };
+        const object2 = object1;
+
+        object1.message = 'Good Job!';
+        console.log(object1);
+        console.log(object2);
+
+        const object3 = {
+            message: 'Good Job!'
+        };
+        console.log(object3 === object1);
+        console.log(object2 === object1);
+        console.log(object3.message === object1.message);
+
+        const object4 = {
+            message: 'Good Job!',
+            price: 799
+        };
+        const {message, price} = object4;
+        console.log(message);
+        console.log(price);
+
+        const object5 = {
+            message,
+            method() {
+                console.log('method');
+            }
+        };
+        console.log(object5);
+        object5.method();
     </script>
 </body>
 </html>
